--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
 
         <!-- Audio for Incorrect Answer -->
-        <audio id="incorrect-sound" src="incorrect.mp3"></audio>
+        <audio id="incorrect-sound" src="audio/incorrect.mp3"></audio>
     </div>
 
     <script>
